--- a/modcon/notebooks/01-Representations/solutions_pose_representation.ipynb
+++ b/modcon/notebooks/01-Representations/solutions_pose_representation.ipynb
@@ -106,14 +106,7 @@
     "\n",
     "# Write your answer (position of obstacle in global frame) here instead of \"None, None\" \n",
     "obstacle_pos_g = np.array([obstacle_x_g, obstacle_y_g])    \n",
-    "print(obstacle_pos_g)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(obstacle_pos_g)"
    ]
   },
   {
