--- a/modcon/notebooks/01-Representations/pose_representation.ipynb
+++ b/modcon/notebooks/01-Representations/pose_representation.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,20 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0471975511965976\n",
+      "[[ 0.5       -0.8660254  2.       ]\n",
+      " [ 0.8660254  0.5        3.       ]\n",
+      " [ 0.         0.         1.       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Type your answer here\n",
     "# Tip 1: always express your angles in radians!\n",
     "# Tip 2: you can go from degrees to radians through the np.deg2rad() function\n",
     "\n",
-    "theta = None\n",
+    "theta = np.deg2rad(60);\n",
     "\n",
     "p = np.array([\n",
-    "    [None, None, None],\n",
-    "    [None, None, None],\n",
-    "    [None, None, None]\n",
+    "    [np.cos(theta), -np.sin(theta), 2],\n",
+    "    [np.sin(theta), np.cos(theta), 3],\n",
+    "    [0, 0, 1]\n",
     "])\n",
     "\n",
     "print(theta)\n",
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,24 +253,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.71809221 0.50260604]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's find the answer!\n",
     "\n",
     "# Step 1. Convert degrees to radians\n",
+    "obstacle_angle = np.deg2rad(obstacle_angle)\n",
+    "duckie_or_g = np.deg2rad(duckie_or_g)\n",
     "\n",
     "# Step 2. Transformation matrix from Duckiebot (a) to origin (o)\n",
+    "Toa = np.array([\n",
+    "    [np.cos(duckie_or_g), -np.sin(duckie_or_g), duckie_pos_g[0]],\n",
+    "    [np.sin(duckie_or_g), np.cos(duckie_or_g), duckie_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
     "\n",
     "# Step 3. Transformation matrix from obstacle (b) to Duckiebot (a)\n",
+    "xa = obstacle_dist_to_duckie * np.cos(obstacle_angle)\n",
+    "ya = obstacle_dist_to_duckie * np.sin(obstacle_angle)\n",
+    "Tab = np.array([\n",
+    "    [np.cos(obstacle_angle), -np.sin(obstacle_angle), xa],\n",
+    "    [np.sin(obstacle_angle), np.cos(obstacle_angle), ya],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
     "\n",
     "# Step 4. Use the above to compute the transformation from obstacle (b) to origin (o)\n",
+    "Tob = np.dot(Toa,Tab)\n",
+    "\n",
     "\n",
     "# Step 5. Extract the information requested from the transformation matrix\n",
+    "x = Tob[0,2]\n",
+    "y = Tob[1,2]\n",
+    "\n",
     "\n",
     "# Write your answer (position of obstacle in global frame) here instead of \"None, None\" \n",
-    "obstacle_pos_g = np.array([None, None])    \n",
+    "obstacle_pos_g = np.array([x, y])    \n",
     "print(obstacle_pos_g)"
    ]
   },
@@ -296,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,24 +348,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.49497475 -0.21213203]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's send the Duckiebot to the correct place!\n",
     "\n",
     "# Convert degrees to radians\n",
+    "rad_deckie_or_g = np.deg2rad(duckie_or_g)\n",
     "\n",
     "# Write the transformation matrix from Duckiebot (a) to origin (o)\n",
+    "Toa = np.array([\n",
+    "    [np.cos(rad_deckie_or_g), -np.sin(rad_deckie_or_g), duckie_pos_g[0]],\n",
+    "    [np.sin(rad_deckie_or_g), np.cos(rad_deckie_or_g), duckie_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
     "\n",
     "# Write the transformation matrix from obstacle (b) to origin (o)\n",
+    "Tob = np.array([\n",
+    "    [np.cos(0), -np.sin(0), obstacle_pos_g[0]],\n",
+    "    [np.sin(0), np.cos(0), obstacle_pos_g[1]],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
+    "\n",
     "\n",
     "# Leverage the known properties of transformation matrices and basics of linear algebra to find your answer\n",
+    "Tab = np.dot(np.linalg.inv(Toa),Tob)\n",
     "\n",
     "# Extract the obstacle position from the transformation matrix\n",
     "\n",
-    "obstacle_x_a = None\n",
-    "obstacle_y_a = None\n",
+    "obstacle_x_a = Tab[0,2]\n",
+    "obstacle_y_a = Tab[1,2]\n",
     "\n",
     "# Place your answer here instead of None, None (position of obstacle in robot frame)\n",
     "obstacle_pos_r = np.array([obstacle_x_a, obstacle_y_a])    \n",
