--- a/modcon/notebooks/03-Wheel-Encoders-Tutorial/wheel_encoders_tutorial.ipynb
+++ b/modcon/notebooks/03-Wheel-Encoders-Tutorial/wheel_encoders_tutorial.ipynb
@@ -11,23 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# 🚙 💻 03 - Wheel encoders tutorial\n",
-    "\n",
-    "Encoders are sensors that convert (analog) angular position, or motion of a shaft, into a digital signal. \n",
-    "\n",
-    "In Duckietown we use Hall effect encoders [link to Wikipedia](https://en.wikipedia.org/wiki/Hall-effect_sensor), which extract the _incremental_ change in angular position of the wheels. Every time the shaft rotates of a certain set angle, i.e., the resolution of the encoder, it emits a pulse. We call these pulses \"ticks\".  \n",
-    "\n",
-    "We can use ticks from both wheels to measure the variation of the position of the Duckiebot while it moves. \n",
-    "\n",
-    "In this activity we learn how to access the data coming from the wheel encoders of our Duckiebot (whether physical or simulated), and understand what each field means. We will use this data for later activities."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 🚙 💻 Obtaining wheel encoder measurements. \n",
@@ -104,6 +87,23 @@
     "* `data`: is the cumulative count of ticks from the encoder in this instance. It will increase if the wheel is spinning forward, decrease if backwards. This is the actual measurement we can use to build our algorithms going forward.\n",
     "* `resolution`: is the total number of ticks for each full revolution of the wheel (a constant).\n",
     "* `type`: indicates the kind of encoder measurements. `1` stands for [incremental measurements](https://github.com/duckietown/dt-ros-commons/blob/daffy/packages/duckietown_msgs/msg/WheelEncoderStamped.msg). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# 🚙 💻 03 - Wheel encoders tutorial\n",
+    "\n",
+    "Encoders are sensors that convert (analog) angular position, or motion of a shaft, into a digital signal. \n",
+    "\n",
+    "In Duckietown we use Hall effect encoders [link to Wikipedia](https://en.wikipedia.org/wiki/Hall-effect_sensor), which extract the _incremental_ change in angular position of the wheels. Every time the shaft rotates of a certain set angle, i.e., the resolution of the encoder, it emits a pulse. We call these pulses \"ticks\".  \n",
+    "\n",
+    "We can use ticks from both wheels to measure the variation of the position of the Duckiebot while it moves. \n",
+    "\n",
+    "In this activity we learn how to access the data coming from the wheel encoders of our Duckiebot (whether physical or simulated), and understand what each field means. We will use this data for later activities."
    ]
   },
   {
@@ -185,9 +185,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The received message is :\n",
+      "\n",
+      "header: \n",
+      "  seq: 372\n",
+      "  stamp: \n",
+      "    secs: 1618436796\n",
+      "    nsecs:  55785179\n",
+      "  frame_id: \"agent/left_wheel_axis\"\n",
+      "data: 4\n",
+      "resolution: 135\n",
+      "type: 1\n",
+      "\n",
+      "N. of ticks : 4\n",
+      "Total ticks : 135\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tests.unit_test.UnitTestMessage at 0x765b906a2a00>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
